@@ -13,4 +13,4 @@ RUN cp /src/build/*-runner /work/application
 
 RUN chmod 775 /work /work/application
 
-CMD ["./application", "-Xmx128m", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["./application", "-XX:+PrintGC", "-XX:+PrintGCTimeStamps", "-XX:+VerboseGC", "-Xmn60M", "-Xmx256m", "-Dquarkus.http.host=0.0.0.0"]
